@@ -1,5 +1,10 @@
 2006-03-02  David Reveman  <davidr@novell.com>
 
+	* plugins/rotate.c (rotateHandleEvent): Reset movement.
+
+	* plugins/switcher.c: Always send activate request when selecting a
+	window.
+
 	* plugins/cube.c (cubePaintTransformedScreen): Reset color.
 
 	* plugins/switcher.c (switchPaintThumb): PAINT_WINDOW_TRANSLUCENT_MASK
